<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/todayFragment">

    <fragment
        android:id="@+id/todayFragment"
        android:name="com.caloracker.ui.today.TodayFragment"
        android:label="@string/today_title"
        tools:layout="@layout/fragment_today">

        <action
            android:id="@+id/action_today_to_confirmation"
            app:destination="@id/foodConfirmationFragment" />
    </fragment>

    <fragment
        android:id="@+id/historyFragment"
        android:name="com.caloracker.ui.history.HistoryFragment"
        android:label="@string/history_title"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/foodConfirmationFragment"
        android:name="com.caloracker.ui.confirmation.FoodConfirmationFragment"
        android:label="@string/confirm_food"
        tools:layout="@layout/fragment_food_confirmation">

        <argument
            android:name="imageUri"
            app:argType="string" />
    </fragment>

</navigation>
